trunk/Archive2/2e/a34943199fcec5/output
main.cpp:24:36: error: unterminated comment
 for f in ~/x20/Videos/shake_dataset/*; do ./blaze-bin/video/content_analysis/motion_stabilization/motion_stabilization_tree_sample --input_file=$f --filter_tree_file=video/content_analysis/motion_stabilization/filter_trees/thumbnail_tree.pbtxt --output_dir=/grundman/Projects --alsologtostderr --ffmpeg_pts_from_framenum; done
                                    ^
main.cpp:4:9: error: expected initializer before 'ThumbnailOptions'
 message ThumbnailOptions   (ClipSegmentationOptions, etc. part of the same proto)
         ^
main.cpp:16:1: error: 'on' does not name a type
 on Close just call GetThumbnail()
 ^
main.cpp:23:1: error: 'run' does not name a type
 run existing stuff over some files:
 ^
